--- a/config/JoyCustom.config.yaml
+++ b/config/JoyCustom.config.yaml
@@ -2,12 +2,10 @@ axis_linear: 1
 axis_angular: 3
 button_changer: 10
 
-forward_maxvel: 0.5
-forward_minvel: 0.1
-back_maxvel: 0.5
-back_minvel: 0.1
-rotate_maxvel: 0.5
-rotate_minvel: 0.1
+forward_maxvel: 1.0
+back_maxvel: -1.0
+rotate_R_maxvel: 1.0
+rotate_L_minvel: -1.0
 
 linear_scale: 0.3
-angular_scale: 0.3
+angular_scale: 0.5
